# spreadsheet

./: Cargo.toml  README.md
backend/: .gitignore  Cargo.toml
backend/migrations/2020-12-22-180200_create_sheet_and_cells/: down.sql  up.sql
backend/src/: main.rs  models.rs  schema.rs  server.rs
backend/static/: index.html
frontend/: .gitignore  Cargo.toml  README.md
frontend/src/: expr.rs  lib.rs  parser.rs
frontend/tests/: wasm.rs  web.rs
frontend/www/: .eslintcache  .eslintrc.js  index.css  index.js  package-lock.json  package.json
frontend/www/public/: index.html
frontend/www/src/: App.js  AppProvider.js  CellsProvider.js  Participants.js  Sheet.js  Socket.js  Utils.js  index.css  index.js
frontend/www2/: .eslintcache
frontend/www2/src/: App.js  index.css
src/: lib.rs  parser.rs
tests/: web.rs
www/: index.css  index.html  index.js  package-lock.json
